refactor: 조회한 게시글 목록 조회시, 만료시간 7일 설정을 위한 자료구조 변경 Set to Hash